[egg_info]
tag_build = 
tag_svn_revision = 0

[aliases]
release = egg_info -RDb ''

[metadata]
name = Uliweb3
version = attr: uliweb.__version__
description = Easy python web framework
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Internet :: WWW/HTTP :: WSGI
    Programming Language :: Python
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
platforms = any
keywords = wsgi web framework
author = attr: uliweb.__author__
author_email = attr: uliweb.__author_email__
url = attr: uliweb.__url__
license = attr: uliweb.__license__
include_package_data = True
install_requires =
    pendulum<3.0
    six
    werkzeug
    ua-parser
    sqlalchemy<2.0.0
zip_safe = False

[options.entry_points]
console_scripts =
    uliweb = uliweb.manage:main
